--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["game-development", "rendering", "graphics"]
 exclude = ["examples"]
 
 [dependencies.bevy]
-version = "0.15.0"
+version = "0.15"
 default-features = false
 optional = true
 
@@ -21,11 +21,11 @@ version =  "0.15"
 optional = true
 
 [dependencies.softbuffer]
-version =  "0.4.6"
+version =  "0.4"
 optional = true
 
 [dev-dependencies]
-bevy = { version = "0.15.0", default-features = false, features = [ "x11", "wayland" ] }
+bevy = { version = "0.15", default-features = false, features = [ "wayland" ] }
 
 [features]
 default = ["dep:bevy", "schedule"]
