--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["game-development", "rendering", "graphics"]
 exclude = ["examples"]
 
 [dependencies.bevy]
-version = "0.16"
+version = "0.17"
 default-features = false
 optional = true
 
@@ -25,7 +25,7 @@ version =  "0.4"
 optional = true
 
 [dev-dependencies]
-bevy = { version = "0.16", default-features = false, features = [ "wayland" ] }
+bevy = { version = "0.17", default-features = false, features = [ "wayland", "debug" ] }
 
 [features]
 default = ["dep:bevy", "schedule"]
